# hikeshi

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
brand/: Hikeshi ロゴキット.html  README.md  logokit.jsx  marks.jsx  matoi_v2.jsx
brand/exports/: index.html
console/: README.md  app.py  requirements.txt
console/static/: index.html
demo/: .dockerignore  Dockerfile  README.md  app.py
docs/: ARCHITECTURE.md  architecture.drawio
hikeshi_agent/: README.md  __init__.py  agent.py  contract.py  depscan.py  depscan_agent.py  live.py  postmortem.py  retriever.py  retriever_es.py  runtime.py  securitywatch.py  tools.py
hikeshi_agent/depscan_sample/: requirements.txt
hikeshi_agent/kb/: README.md
hikeshi_agent/securitywatch_cache/: ghsa.json  kev.json  kev_index.json  manifest.json
incident_bench/: __init__.py  baselines.py  run.py  schema.py  scorer.py
incident_bench/cases/: inc_001.json  inc_002.json  inc_003.json  inc_004.json  inc_005.json  inc_006.json  inc_007.json  inc_008.json  inc_009.json  inc_010.json  inc_011.json  inc_012.json  inc_013.json  inc_014.json  inc_015.json  inc_016.json  inc_017.json  inc_018.json
incident_bench/recorded/: hikeshi_advisory.json
scripts/: deploy-cron.sh  deploy-es.sh  deploy.sh
tests/: test_agent_skeleton.py  test_console_postmortem.py  test_console_views.py  test_demo_contain.py  test_depscan.py  test_live_signals.py  test_notify.py  test_postmortem.py  test_recorded_outputs.py  test_retriever.py  test_scorer.py  test_securitywatch.py
(+22 files in other folders)
